--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,35 +8,28 @@
     android:orientation="vertical"
     android:padding="25dp">
 
-    <ScrollView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_gravity="center_horizontal">
+        android:orientation="vertical">
 
-        <LinearLayout
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:id="@+id/comicTitleTV"
+            android:layout_gravity="center_horizontal"
+            android:textStyle="bold"
+            android:textSize="20sp"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/comicTitleTV"
-                android:layout_gravity="center_horizontal"
-                android:textStyle="bold"
-                android:textSize="20sp"/>
-
-            <com.example.jacob.ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:scaleType="fitCenter"
-                android:id="@+id/comicImg"
-                android:contentDescription="@string/comicContentDescription"/>
-        </LinearLayout>
-
-    </ScrollView>
+        <com.example.jacob.xkcdviewer.TouchImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:scaleType="fitCenter"
+            android:id="@+id/comicImg"
+            android:contentDescription="@string/comicContentDescription"/>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
