--- a/app/src/main/res/layout/screen_slide_page.xml
+++ b/app/src/main/res/layout/screen_slide_page.xml
@@ -46,7 +46,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Shake the device for a random comic"/>
+            android:text="@string/shakeTv"/>
     </LinearLayout>
 
 </LinearLayout>
