--- a/app/src/main/res/layout/screen_slide_page.xml
+++ b/app/src/main/res/layout/screen_slide_page.xml
@@ -16,7 +16,7 @@
             android:id="@+id/comicTitleTV"
             android:layout_gravity="center_horizontal"
             android:textStyle="bold"
-            android:textSize="20sp"/>
+            android:textSize="22sp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -33,6 +33,21 @@
             android:scaleType="fitCenter"
             android:id="@+id/comicImg"
             android:contentDescription="@string/comicContentDescription"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:orientation="horizontal"
+        android:paddingTop="15dp"
+        android:layout_gravity="center_horizontal"
+        style="?android:attr/buttonBarStyle">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/footerTv"
+            />
     </LinearLayout>
 
 </LinearLayout>
